--- a/BackEnd/IntPinturaAPI/src/main/resources/application.properties
+++ b/BackEnd/IntPinturaAPI/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=IntPinturaAPI
-server.port=8090
+server.port=8000
 #Database
 spring.datasource.url=jdbc:mysql://localhost:3306/intpintura?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=2003
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
