--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.8",
     "crypto-js": "^4.2.0",
+    "lucide-react": "^0.462.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
