--- a/BackEnd/IntPinturaAPI/src/main/resources/application.properties
+++ b/BackEnd/IntPinturaAPI/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 #JWT
 jwt.secret=feSLZrm7QpEPMc3TY9B2erBaf6lOjLny5dRUd9h4BBo
 jwt.expiration=604800
+
+spring.main.allow-circular-references=true
