--- a/BackEnd/IntPinturaAPI/src/main/resources/application.properties
+++ b/BackEnd/IntPinturaAPI/src/main/resources/application.properties
@@ -12,3 +12,4 @@ jwt.secret=feSLZrm7QpEPMc3TY9B2erBaf6lOjLny5dRUd9h4BBo
 jwt.expiration=604800
 
 spring.main.allow-circular-references=true
+spring.servlet.multipart.max-file-size=20MB
