--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.462.0",
     "primeflex": "^3.3.1",
